@@ -49,6 +49,9 @@ __thiscall void Entity_Player::AddPrettyFly();
 "558bec83ec085356578b7d??8bd985ff":
 __thiscall void Entity_Player::AddCoins(int amount);
 
+"558bec6aff68????????64a1????????5081ecb4000000a1????????33c58945??53":
+__thiscall void Entity_Player::ControlActiveItem(int slot);
+
 "558bec83e4f883ec208b4d":
 static cleanup PosVel Entity_Player::GetMultiShotPositionVelocity(int loopIndex, WeaponType weaponType, Vector shotDirection, float shotSpeed, Weapon_MultiShotParams multiShotParams);
 
