@@ -40,6 +40,12 @@ Modified:
 	SetDizzyAmount(TargetIntensity, CurrentIntensity) - Providing CurrentIntensity is now optional
 * EntityNPC:
 	ShootMaggotProjectile(Position, Target, FallingSpeed = -8.0, YOffset = -24.0)
+* Callbacks:
+	- MC_PLAYER_GET_ACTIVE_MAX_CHARGE / MC_PLAYER_GET_ACTIVE_MIN_USABLE_CHARGE
+		Will no longer run for empty active item slots.
+		Now provide the current charge value as an argument.
+		Returning a value no longer stops the callback, and changes the charge value passed to the next callback.
+		If the final result of the callback is <0, the result is treated as 0.
 * The game no longer prematurely ends the daily run if there was console input, instead blocking it
 /newline/
 Fixes:
